[package]
name = "redis-cell"
version = "0.4.0"
authors = ["Brandur <brandur@mutelight.org>"]
build = "build.rs"
description = "A Redis module that provides rate limiting in Redis as a single command."
license = "MIT"
repository = "https://github.com/brandur/redis-cell"

[lib]
crate-type = ["dylib"]

[dependencies]
bitflags = "2.6"
libc = "0.2"
time = { version = "0.3", features = ["formatting"] }

[build-dependencies]
cc = "1.0.28"
