[package]
name = "redis-cell"
version = "0.5.0"
authors = ["Brandur <brandur@mutelight.org>"]
build = "build.rs"
description = "A Redis module that provides rate limiting in Redis as a single command."
edition = '2024'
license = "MIT"
repository = "https://github.com/brandur/redis-cell"

[features]
valkey = []
e2e-test = []

[lib]
crate-type = ["dylib"]

[dependencies]
bitflags = "2.6"
libc = "0.2"
time = { version = "0.3", features = ["formatting"] }

[build-dependencies]
cc = "1.2"

[dev-dependencies]
redis = { version = "0.32", features = ["connection-manager", "tokio-comp"] }
testcontainers = { version = "0.25", features = ["reusable-containers"] }
tokio = { version = "1.48", features = ["macros"] }
